# lettergrams-apriltags

./: CMakeLists.txt  Makefile  README.md  apriltag_test.cpp  chromatag.cpp  image_u32.c  image_u8.c  pnm2mat.cpp  pnm2mat.hpp  rgb2lab.cpp  rgb2lab.hpp  tagtest  tagtest.c
images/: betaLab-test.pnm  debug_blur.pnm  debug_decision.pnm  debug_gray_samples.pnm  debug_lines.pnm  debug_output.pnm  debug_quads.pnm  debug_segmentation.pnm  distance-alphaLab-inverse.pnm  distance-alphaLab.pnm  distance.pnm
test-images/: austin.pnm
